uso mysql para plan de cuentas - crud

--- a/SistemaContableV1/SistemaContableV1.csproj
+++ b/SistemaContableV1/SistemaContableV1.csproj
@@ -20,4 +20,8 @@
     </COMReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.1.0" />
+  </ItemGroup>
+
 </Project>
